<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="-1dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:srcCompat="@drawable/tb_none" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textHolderName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Flex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/dialog_adder_name_hint"
        app:counterMaxLength="38"
        android:nextFocusDown="@+id/menuMeasureText"
        android:nextFocusLeft="@+id/menuMeasureText"
        android:nextFocusRight="@+id/menuMeasureText"
        android:nextFocusUp="@+id/menuMeasureText"
        android:nextFocusForward="@id/menuMeasureText"
        android:imeOptions="actionNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollForChips">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="textCapSentences" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textHolderQuantity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Flex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/dialog_adder_cant_count_hint"
        android:nextFocusForward="@id/menuTypeHolder"
        app:layout_constraintEnd_toStartOf="@+id/menuMeasureHolder"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHolderName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuMeasureHolder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu.Flex"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/dialog_adder_cant_hint"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHolderName">

        <AutoCompleteTextView
            android:id="@+id/menuMeasureText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="none"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menuTypeHolder"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu.Flex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:focusable="false"
        android:hint="@string/dialog_adder_type_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHolderQuantity">

        <AutoCompleteTextView
            android:id="@+id/menuTypeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:inputType="none"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <HorizontalScrollView
        android:id="@+id/scrollForChips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nestedScrollingEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupHelper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:chipSpacing="2dp"
                app:chipSpacingHorizontal="2dp"
                app:chipSpacingVertical="2dp"
                app:singleLine="true"
                app:singleSelection="true" />
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAdder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewMain"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/adder_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMain"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>